test/error/PreIfUnterminated2.ci
public static class Test
{
	public static bool Run()
	{
#if false
		return true;
	}
} //ERROR: Expected '#endif', got end-of-file //ERROR: Expected '}', got end-of-file //ERROR: Expected '}', got end-of-file